# memoria

./: .env-example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260409_01_initial_foundation.py  20260409_02_add_screenshot_payloads_and_fragments.py  20260410_03_add_interpretation_embeddings_and_map_tables.py
docs/: architektura_osobistego_systemu_pamieci_i_wiedzy.md  chatgpt.md
docs/superpowers/plans/: 2026-04-09-screenshots-vertical-slice-implementation.md  2026-04-11-screenshots-v2-alignment-hardening-implementation.md
docs/superpowers/specs/: 2026-04-09-screenshots-vertical-slice-design.md  2026-04-11-screenshots-v2-alignment-hardening-design.md
src/memoria/: __init__.py  llm_utils.py  runtime_engines.py  runtime_settings.py
src/memoria/admin/: __init__.py  cli.py  service.py
src/memoria/api/: __init__.py  app.py  knowledge.py  map.py  schemas.py  screenshots.py  search.py
src/memoria/assistant/: __init__.py  service.py
src/memoria/domain/: __init__.py  models.py
src/memoria/ingest/: __init__.py  service.py
src/memoria/knowledge/: __init__.py  service.py
src/memoria/knowledge/read/: __init__.py  contracts.py  service.py
src/memoria/map/: __init__.py  service.py
src/memoria/ocr/: __init__.py  engines.py  service.py
src/memoria/pipeline/: __init__.py  service.py
src/memoria/projections/: __init__.py  service.py
src/memoria/screenshots/: __init__.py  pipeline.py
src/memoria/screenshots/read/: __init__.py  contracts.py  filters.py  service.py
src/memoria/search/: __init__.py  embeddings.py  service.py
src/memoria/storage/: __init__.py  blob_store.py  metadata_db.py
src/memoria/vision/: __init__.py  contracts.py  engines.py  mapper.py  service.py
tests/integration/: _screenshot_read_helpers.py  test_absorb_service.py  test_admin_import_screenshots.py  test_admin_service.py  test_api_end_to_end.py  test_assistant_service.py  test_hybrid_search_api.py  test_ingest_service.py  test_knowledge_api.py  test_knowledge_read_service.py  test_ocr_service.py  test_projection_service.py  test_schema_tables.py  test_screenshot_read_api.py  test_screenshot_read_service.py  test_semantic_map_api.py  test_vision_service.py
tests/unit/: test_ocr_engines.py  test_runtime_settings.py  test_screenshot_read_filters.py  test_vision_engines.py
