[project]
name = "memoria"
version = "0.1.0"
description = "Memoria screenshot vertical slice foundation"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoria"]

[tool.pytest.ini_options]
testpaths = ["tests"]
