[project]
name = "memoria"
version = "0.1.0"
description = "Memoria screenshot vertical slice foundation"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "paddleocr==3.4.0",
  "paddlepaddle-gpu==3.3.0 ; python_full_version < '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "pillow>=11.0.0",
  "python-dotenv>=1.1.0",
  "rich>=14.3.3",
  "sqlalchemy>=2.0.40",
  "sqlite-vec>=0.1.9",
]

[project.scripts]
memoria-admin = "memoria.admin.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu126" }

[[tool.uv.index]]
name = "paddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/memoria"]

[tool.pytest.ini_options]
testpaths = ["tests"]
